BEAUT-1199: [BUG-Beautify] [Mobile] Event box: time not match alignment

--- a/beautify-la/public/content/style.css
+++ b/beautify-la/public/content/style.css
@@ -4751,8 +4751,7 @@ div.placeholder-custom {
         line-height: 38px;
         padding: 0;
         font-size: 15px;
-        color: rgba(44, 44, 44, 0.5);
-        text-shadow: 0 1px 0 rgba(44, 44, 44, 0.5); } }
+        color: #2c2c2c; } }
     @media (max-width: 359px) {
       .new-spot.multi-spot .spot-footer .spot-text {
         height: 33px;
@@ -4765,11 +4764,12 @@ div.placeholder-custom {
       @media (max-width: 767px) {
         .new-spot.multi-spot .spot-footer .spot-text .color-orange {
           font-size: 16px;
-          color: rgba(255, 69, 39, 0.5);
-          text-shadow: 0 1px 0 rgba(255, 69, 39, 0.5); } }
+          color: #ff4527;
+          line-height: 38px; } }
       @media (max-width: 359px) {
         .new-spot.multi-spot .spot-footer .spot-text .color-orange {
-          font-size: 14px; } }
+          font-size: 14px;
+          line-height: 33px; } }
   .new-spot.multi-spot .spot-content, .new-spot.single-special-spot .spot-content {
     height: 271px; }
     @media (max-width: 979px) {
@@ -4806,13 +4806,13 @@ div.placeholder-custom {
       .new-spot.single-special-spot .spot-footer .spot-text, .new-spot.single-ticket-spot .spot-footer .spot-text, .new-spot.single-rsvp-spot .spot-footer .spot-text {
         font-size: 15px;
         line-height: 38px;
-        top: 72px;
+        top: 67px;
         font-weight: 500; } }
     @media (max-width: 359px) {
       .new-spot.single-special-spot .spot-footer .spot-text, .new-spot.single-ticket-spot .spot-footer .spot-text, .new-spot.single-rsvp-spot .spot-footer .spot-text {
         font-size: 12px;
         line-height: 26px;
-        top: 65px; } }
+        top: 53px; } }
     .new-spot.single-special-spot .spot-footer .spot-text .color-orange, .new-spot.single-ticket-spot .spot-footer .spot-text .color-orange, .new-spot.single-rsvp-spot .spot-footer .spot-text .color-orange {
       color: #2c2c2c;
       font-weight: 400; }
