--- a/beautify-la/src/assets/css/sass/pages/company/list/_list.scss
+++ b/beautify-la/src/assets/css/sass/pages/company/list/_list.scss
@@ -661,8 +661,8 @@
                     line-height:38px;
                     padding:0;
                     font-size: 15px;
-                    color: rgba(44, 44, 44, .5);
-                    text-shadow: 0 1px 0 rgba(44, 44, 44, .5);
+                    color: rgba(44, 44, 44, 1);
+                    //text-shadow: 0 1px 0 rgba(44, 44, 44, .5);
                 }
 
                 @media (max-width:359px) {
@@ -678,12 +678,14 @@
 
                     @media (max-width:767px) {
                         font-size:16px;
-                        color: rgba(255, 69, 39, .5);
-                        text-shadow: 0 1px 0 rgba(255, 69, 39, .5);
+                        color: rgba(255, 69, 39, 1);
+                        //text-shadow: 0 1px 0 rgba(255, 69, 39, .5);
+                        line-height: 38px;
                     }
 
                     @media (max-width:359px) {
                         font-size:14px;
+                        line-height: 33px;
                     }
                 }
             }
@@ -752,14 +754,14 @@
                 @media (max-width: 767px){
                     font-size:15px;
                     line-height: 38px;
-                    top: 72px;
+                    top: 67px;
                     font-weight: 500;
                 }
 
                 @media (max-width: 359px){
                     font-size:12px;
                     line-height: 26px;
-                    top: 65px;
+                    top: 53px;
                 }
 
                 .color-orange{
